# NoCompass-In-Dialogue-SKSE

./: .gitignore  Build.ps1  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
config/: DialogueHUDFade.ini
src/: DialogueMenuWatcher.cpp  DialogueMenuWatcher.h  HudFader.cpp  HudFader.h  Logger.cpp  Logger.h  PCH.h  Plugin.cpp  Plugin.h  ScaleformHudTarget.cpp  ScaleformHudTarget.h  Settings.cpp  Settings.h  main.cpp
tests/: FaderTests.cpp  SettingsTests.cpp  StateMachineTests.cpp  TestHarness.h
